# doldrums

./: .ghci  .gitignore  README.md  doldrums.cabal  package.yaml  parsegraph.dot  test.dol  tour.dol
.github/workflows/: haskell.yml
app/: Main.hs  Repl.hs
src/: Compile.hs  Derive.hs  Desugar.hs  FixAst.hs  GMachine.hs  Graphviz.hs  Heap.hs  Interpret.hs  LLVM.hs  Language.hs  Lib.hs  Parse.hs  Prelude.dol  STG.hs  Template.hs  TemplateInstantiation.hs  Typecheck.hs
test/: Parser.hs  Spec.hs
test/broken/: apply-int.dol  case-result-types.dol  duplicate-constructor.dol  duplicate-function.dol  guards-nonexhaustive.dol  if-scrutinee.dol  mismatched-numeric-types.dol  nonexhaustive-case.dol  nonexhaustive-custom.dol  nonexhaustive-either.dol  nonexhaustive-guard-no-otherwise.dol  nonexhaustive-list.dol  nonexhaustive-maybe.dol  nonexhaustive-ordering.dol  plus-string.dol  typed-hole.dol  undefined-variable.dol
test/expect/: all-comparisons.dol  any-top-level-order.dol  ap-dollar.dol  backtick-chained.dol  backtick-infix.dol  backtick-map.dol  backtick-simple.dol  backtick-where.dol  big-number.dol  bool-ops.dol  bool.dol  ceiling.dol  class-combined.dol  class-constrained-func.dol  class-eq-color.dol  class-instance-context.dol  class-instance-list.dol  class-instance-maybe.dol  class-instance-polymorphic.dol  class-multiple-instances.dol  class-simple.dol  class-two-methods.dol  comparison.dol  complex.dol  composition.dol  constant.dol  cycle.dol  do-notation.dol  double-negation.dol  drop-while.dol  explicit-double-negation-dollar.dol  explicit-double-negation.dol  factorial-case.dol  factorial-no-dollar.dol  factorial.dol  fibonacci-case.dol  fibonacci.dol  floor.dol  guards-multiline.dol  guards-single-line.dol  (+58 more)
