cabal-version: 3.0

name:           doldrums
version:        0.1.0.0
synopsis:       A small, purely functional programming language.
description:    Please see the README on GitHub at <https://github.com/mitchellvitez/doldrums#readme>
homepage:       https://github.com/mitchellvitez/doldrums#readme
bug-reports:    https://github.com/mitchellvitez/doldrums/issues
author:         Mitchell Vitez
maintainer:     mitchell@vitez.me
copyright:      2020 Mitchell Vitez
build-type:     Simple
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/mitchellvitez/doldrums

library
  exposed-modules:
      FixAst
      Graphviz
      Interpret
      Language
      Lib
      Parse
      Typecheck
  other-modules:
      Paths_doldrums
  hs-source-dirs:
      src
  default-extensions:
      OverloadedStrings
      LambdaCase
      GADTs
      TypeOperators
      KindSignatures
      StandaloneDeriving
      BangPatterns
  build-depends:
      base >=4.7 && <5
    , constraints >=0.12
    , containers >=0.6
    , deepseq >=1.4
    , heap >=1.0
    , hspec >=2.7
    , megaparsec >=8.0
    , mtl >=2.2
    , parser-combinators >=1.2
    , raw-strings-qq >=1.1
    , text >=1.2
  default-language: Haskell2010

executable doldrums
  main-is: Main.hs
  hs-source-dirs:
      app
  default-extensions:
      OverloadedStrings
      LambdaCase
      GADTs
      TypeOperators
      KindSignatures
      StandaloneDeriving
      BangPatterns
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , doldrums
  default-language: Haskell2010

test-suite doldrums-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  default-extensions:
      OverloadedStrings
      LambdaCase
      GADTs
      TypeOperators
      KindSignatures
      StandaloneDeriving
      BangPatterns
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , doldrums
    , hspec >=2.7
    , megaparsec >=8.0
    , raw-strings-qq >=1.1
    , text >=1.2
  default-language: Haskell2010
