cabal-version: 3.0

name:           doldrums
version:        0.1.0.0
synopsis:       A small, purely functional programming language.
description:    Please see the README on GitHub at <https://github.com/mitchellvitez/doldrums#readme>
homepage:       https://github.com/mitchellvitez/doldrums#readme
bug-reports:    https://github.com/mitchellvitez/doldrums/issues
author:         Mitchell Vitez
maintainer:     mitchell@vitez.me
copyright:      2020 Mitchell Vitez
build-type:     Simple
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/mitchellvitez/doldrums

common warnings
  ghc-options:
    -Wall -Wextra -Werror
    -Wincomplete-record-updates -Wincomplete-uni-patterns
    -Wpartial-fields -Wredundant-constraints
    -Wunused-packages -Wambiguous-fields
    -Wunused-type-patterns -Wno-unused-do-bind

library
  import: warnings
  exposed-modules:
      Derive
      Desugar
      FixAst
      Graphviz
      Interpret
      LLVM
      Language
      Lib
      Parse
      STG
      Typecheck
  other-modules:
      Paths_doldrums
  hs-source-dirs:
      src
  default-extensions:
      OverloadedStrings
      LambdaCase
      GADTs
      TypeOperators
      KindSignatures
      StandaloneDeriving
      BangPatterns
  build-depends:
      base >=4.20 && <5
    , containers >=0.6
    , directory >=1.3
    , megaparsec >=8.0
    , mtl >=2.2
    , parser-combinators >=1.2
    , process >=1.6
    , temporary >=1.3
    , text >=1.2
  default-language: GHC2024

executable doldrums
  import: warnings
  main-is: Main.hs
  hs-source-dirs:
      app
  default-extensions:
      OverloadedStrings
      LambdaCase
      GADTs
      TypeOperators
      KindSignatures
      StandaloneDeriving
      BangPatterns
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.20 && <5
    , doldrums
    , text >=1.2
    , optparse-applicative >=0.19 && <1
  default-language: GHC2024

test-suite doldrums-test
  import: warnings
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  other-modules:
      Parser
  default-extensions:
      OverloadedStrings
      LambdaCase
      GADTs
      TypeOperators
      KindSignatures
      StandaloneDeriving
      BangPatterns
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.20 && <5
    , directory >=1.3
    , doldrums
    , filepath >=1.4
    , hspec >=2.7
    , megaparsec >=8.0
    , raw-strings-qq >=1.1
    , text >=1.2
  default-language: GHC2024
